# oimp-2020-2021

./: .gitignore  CMakeLists.txt  README.md  timer.h  typical_mistakes.txt  typical_mistakes_second.txt  usual_mistakes.txt
01.14/: CMakeLists.txt  first.cpp  game.cpp  second.cpp
01.21/: CMakeLists.txt  first.cpp  second.cpp
01.28/: CMakeLists.txt  input.txt
02.04/: CMakeLists.txt  I.cpp  game.cpp
02.11/: CMakeLists.txt  first.cpp  game.cpp  getch.h
02.18/: CMakeLists.txt  CW.cpp  c.h  second.cpp
04.02/: I.cpp
14.01/: CMakeLists.txt  second.cpp
21.01/: CMakeLists.txt  game.cpp
28.01/: CMakeLists.txt  CW.cpp  second.cpp
mistakes/: typical_mistakes.txt  typical_mistakes_fourth.txt
